service-mesh/inventory-ui/virtual-service-all.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: inventory-ui
spec:
  hosts:
  - "inventory-ui"
  http:
    route:
    - destination:
        host: inventory-ui
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: inventory-bff
spec:
  hosts:
  - "inventory-bff"
  http:
    route:
    - destination:
        host: inventory-bff
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: inventory-svc
spec:
  hosts:
  - "inventory-svc"
  http:
    route:
    - destination:
        host: inventory-svc
