service-mesh/inventory-ui/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: inventory
spec:
  hosts:
  - "*"
  gateways:
  - inventory-management-ui-solution
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: inventory-ui
